@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE book PUBLIC "-//OASIS//DTD Docbook XML 4.3//EN"
-                      "file:///usr/share/xml/docbook/schema/dtd/4.3/docbookx.dtd">
+           "http://www.oasis-open.org/docbook/xml/4.3/docbookx.dtd"
+> 
 <book>
 <article>
 
